# nicoyomi

./: .gitignore  .ignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
src/: logging.rs  main.rs  utils.rs
src/dto/: mangadex.rs  mod.rs
src/pages/: cover.rs  download.rs  download_chapter.rs  downloads.rs  index.rs  manga.rs  mod.rs
src/services/: mod.rs
src/services/mangadex/: chapter.rs  cover.rs  manga.rs  mod.rs  volume.rs
templates/: common-style.html  downloads.html  index.html  manga-item.html  manga.html  rating-star.html  rating-stars.html  scroll-bottom-anchor.html  scroll-bottom.html  scroll-top-anchor.html  scroll-top.html
