[package]
name = "nicoyomi"
version = "0.1.0"
edition = "2021"
authors = ["enzious <enzi@braindead.io>"]

[dependencies]
actix-files = "0.6.2"
actix-web = { version = "4.3.1", features = [ "cookies" ] }
askama = { version = "0.12.0", features = [ "with-actix-web" ] }
askama_actix = "0.14.0"
awc = { version = "3.1.1", features = [ "rustls" ] }
bytes = "1.4.0"
futures = "0.3.27"
html-macro = "0.2.2"
http = "0.2.9"
itertools = "0.10.5"
lazy_static = "1.4.0"
log = "0.4.17"
natord = "1.0.9"
regex = "1.7.3"
rustls = "0.20.8"
rustls-native-certs = "0.6.2"
serde = { version = "1.0.158", features = [ "serde_derive" ] }
serde_derive = "1.0.158"
serde_json = "1.0.94"
serde_urlencoded = "0.7.1"
slog = "2.7.0"
slog-async = "2.7.0"
slog-scope = "4.4.0"
slog-stdlog = "4.1.1"
slog-term = "2.9.0"
thiserror = "1.0.40"
tokio = { version = "1.26.0", features = [ "fs", "io-util", "process", "sync" ] }
